fixed linking issues and removed flip.js and replaced id with backface-visibility

--- a/Website/homepage.css
+++ b/Website/homepage.css
@@ -35,6 +35,10 @@
     transform: rotateY(180deg);
 }
 
+.front {
+    backface-visibility: hidden;
+}
+
 .back {
     transform: rotateY(180deg);
 }
