--- a/Website/mainstyle.css
+++ b/Website/mainstyle.css
@@ -32,14 +32,6 @@ body {
     border-color: transparent;
 }
 
-#navbar div {
-    text-decoration: none;
-    color: inherit;
-    font-size: 150%;
-    display: block;
-    padding: 10px 10px 10px 10px;
-}
-
 #navbar #Overview {
     background-color: rgb(35, 67, 163);
 }
@@ -59,7 +51,7 @@ body {
 }
 
 #div1 {
-    margin-left: 245px;
+    margin-left: 240px;
     padding-bottom: 2px;
 }
 
